2008-11-12  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-app-menu-example.c (create_menu): Make all
	buttons finger size.

2008-11-11  Alejandro G. Castro	 <alex@igalia.com>

	Fixed the compilation without maemo gtk adding ifdefs with
	MAEMO_CHANGES define to the code, we have to check this version
	more carefully.

	* examples/Makefile.am: Added control to avoid some examples that
	just make sense with maemo gtk.

	* src/hildon-gtk.c:
	* src/hildon-gtk.h: Remove some functions that use the maemo gtk
	hildon modes with the define.

	* examples/hildon-edit-toolbar-example.c,
	(create_icon_view): Create the icon view without hildon-gtk
	helpers if we are not using maemo gtk.

	* src/hildon-touch-selector.c,
	(_create_new_column): Create the treeview without hildon-gtk
	helpers if we are not using maemo gtk.

2008-11-11  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pnnable-area.c,
	(hildon_pannable_area_dispose),
	(hildon_pannable_area_button_press_cb),
	(hildon_pannable_area_child_mapped),
	(hildon_pannable_area_add),
	(hildon_pannable_area_remove): Added code to control the position
	of the event_window when adding and removing children from the
	pannable. We have to raise the event window when the child is
	mapped.

	Fixes: NB#89811 (Not able to select first image thumbnail in multi
	selection mode using custom widget inside pannable)

2008-11-11  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: version bump

2008-11-11  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.22]

	* NEWS: updates
	* configure.ac: bump version
	* debian/changelog: updates

2008-11-10  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-touch-selector.c: (_create_new_column): Disable treeview
	search mode, in order to avoid lose the focus on the treeview when
	a hw key (like enter) is pressed.

	Fixes: NB#91995 (Calendar is crashing after pressing 'Enter' HW key
	in HildonDateSelector dialog)
